# computer-club

./: .clang-format  CMakeLists.txt  README.md
include/: client.hpp  club.hpp  consts.hpp  event.hpp  table.hpp  time.hpp
src/: club.cpp  main.cpp  time.cpp
